fix: zooming on safari cant fix

--- a/css/pages/_recording.scss
+++ b/css/pages/_recording.scss
@@ -164,9 +164,6 @@
                     outline: none;
                 }
 
-                &:focus {
-                    font-size: 16px;
-                }
             }
 
             .selectBox-wrapper {
